[gd_scene load_steps=12 format=3 uid="uid://bc2y2isjaowar"]

[ext_resource type="Texture2D" uid="uid://b54o3g12hd5eh" path="res://Project/20_assets/20_sprite/John_Sprite.png" id="1_ntmv5"]
[ext_resource type="Script" path="res://Project/10_scripts/johnmovement.gd" id="1_vyl7l"]
[ext_resource type="Texture2D" uid="uid://coq3d0i8ksw53" path="res://Project/20_assets/20_sprite/John_Crouch.png" id="2_evp6g"]
[ext_resource type="Texture2D" uid="uid://dtnraj81aqmhs" path="res://Project/20_assets/20_sprite/John_dash.png" id="3_can2k"]
[ext_resource type="Texture2D" uid="uid://cpanw7cxxj8le" path="res://Project/20_assets/20_sprite/John_dj.png" id="4_yrr7n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dxu5h"]
atlas = ExtResource("2_evp6g")
region = Rect2(0, 0, 62, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkpru"]
atlas = ExtResource("3_can2k")
region = Rect2(0, 0, 62, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j3oq"]
atlas = ExtResource("4_yrr7n")
region = Rect2(0, 0, 62, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwrie"]
atlas = ExtResource("1_ntmv5")
region = Rect2(0, 0, 62, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3j07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxu5h")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkpru")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j3oq")
}],
"loop": true,
"name": &"double_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwrie")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l32fc"]
radius = 0.1
height = 1.0

[node name="John" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.53331, 0)
script = ExtResource("1_vyl7l")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0946717, 0)
alpha_cut = 2
sprite_frames = SubResource("SpriteFrames_o3j07")
animation = &"stand"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0110781, -0.186261, -0.0107727)
shape = SubResource("CapsuleShape3D_l32fc")

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Can_Dash" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Can_Dash" to="." method="_on_can_dash_timeout"]
